# Sunday

./: .editorconfig  .env.example  .gitattributes  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo-read.sh  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: repo-checks.yml
.omx/: project-memory.json
docs/: extension-surfaces.md  external-ingress.md  host-contract.md  host-contract.ts  mvp-demo.md  mvp-status.md  opencli-browser-integration.md  phase-1.md  phase-2-plan.md  skills-source-of-truth.md  typecheck-triage-20260603.md  verification-20260526-phase2.md  verification-20260526.md  verification-20260603-phase0.md
host-qt/: CMakeLists.txt
host-qt/include/hostqt/: appwindow.h  hostcontext.h  sidecarclient.h  sidecareventstream.h  sidecarsupervisor.h  webpage.h
host-qt/include/hostqt/channels/: assistantchannel.h  audiochannel.h  conversationchannel.h  filechannel.h  reportchannel.h  serviceconfigchannel.h  sessionchannel.h  skillschannel.h  systemchannel.h  taskchannel.h  windowchannel.h
host-qt/src/: appwindow.cpp  filechannel_smoke.cpp  hostcontext.cpp  main.cpp  sidecarclient.cpp  sidecareventstream.cpp  sidecarsupervisor.cpp  systemchannel_smoke.cpp  webpage.cpp
host-qt/src/channels/: assistantchannel.cpp  audiochannel.cpp  conversationchannel.cpp  filechannel.cpp  reportchannel.cpp  serviceconfigchannel.cpp  sessionchannel.cpp  skillschannel.cpp  systemchannel.cpp  taskchannel.cpp  windowchannel.cpp
pi-sidecar/: README.md  package-lock.json  package.json
pi-sidecar/src/: dev-server.mjs
scripts/: cleanup-test-conversations.mjs  deepseek-worker.mjs  desktop-entry.sh  launch-desktop.sh  paths.mjs  qt-verify-runtime.mjs  resolve-host-bin.sh  run-daemon.sh  run-demo.sh  sidecar-verify-runtime.mjs  verify-agent-file-ops.mjs  verify-assistant-follow-up.mjs  verify-browser-action-bridge-source.mjs  verify-browser-noninvasive-source.mjs  verify-browser-panel-bundle.mjs  verify-browser-runtime-profile-source.mjs  verify-browser-service-config-api.mjs  verify-browser-settings-bundle.mjs  verify-browser-tab-select-logic.mjs  verify-browser-tool-api.mjs  verify-browser-tool-bridge-source.mjs  verify-browser-tool-disabled-default.mjs  verify-browser-tool-use-bundle.mjs  verify-cli-tools-api.mjs  verify-cli-tools-source.mjs  verify-conversation-api.mjs  verify-conversation-context-overview.mjs  verify-failed-file-action.mjs  verify-failed-file-feedback.mjs  verify-file-api.mjs  verify-file-bulk-actions.mjs  verify-file-channel.sh  verify-file-guidance.mjs  verify-history-model-badge.mjs  verify-host-qt-browser-panel.mjs  verify-host-qt-browser-settings.mjs  verify-host-qt-clear-all.mjs  verify-host-qt-cli-tools.mjs  verify-host-qt-doc-open.sh  verify-host-qt-doc-save.mjs  (+53 more)
scripts/lib/: verify-host-qt-workspace.mjs
skills/opencli-browser/: SKILL.md
web-client/: .gitignore  index.html  package.json  vite.config.ts
web-client/src/: dev-approval-broker.ts  main.ts  (+3 more)
(+167 files in other folders)
